@@ -253,7 +253,8 @@
 	- squeaky clean memory leak checking.
 	- always malloc rpmfi structure, refcounts are correct in rpmtsRun().
 	- skip redundant /sbin/ldconfig scripts on upgrade (if possible).
-	- python: supid typo broke ts.check().
+	- python: stupid typo broke ts.check().
+	- fix: add epoch to "already installed" check.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
